--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ h1 {
     display: flex;
     justify-content: center;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    text-align: center;
+    margin-bottom: 10px; 
+    list-style-type: none;
+    font-size: 18px;
+}
